force-app/main/default/objects/DIA_Case__c/DIA_Case__c.object-meta.xml
<CustomObject>
    <label>DIA Case</label>
    <nameField>
        <displayFormat>DIACase-{000000}</displayFormat>
        <label>DIA Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>