force-app/main/default/objects/DIA_Case__c/fields/Case_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Completed Date</label>
    <type>Date</type>
</CustomField>