force-app/main/default/objects/DIA_Case__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Intake</fullName>
            </value>
            <value>
                <fullName>Customer Interface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>