force-app/main/default/objects/DIA_Case__c/fields/Case_Seriousness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Case_Seriousness_Rating__c</fullName>
    <label>Case Seriousness Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Substantial</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>