force-app/main/default/objects/DIA_Case__c/fields/Case_SLA_Code__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case SLA Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>