force-app/main/default/objects/DIA_Case__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>Tier 5 Reinvestigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>