force-app/main/default/objects/DIA_Case__c/fields/Closure_Type__c.field-meta.xml
<CustomField>
    <fullName>Closure_Type__c</fullName>
    <label>Closure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed T5</fullName>
            </value>
            <value>
                <fullName>Cancelled T5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>