force-app/main/default/objects/DIA_Case__c/fields/Current_Task__c.field-meta.xml
<CustomField>
    <fullName>Current_Task__c</fullName>
    <label>Current Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated State</fullName>
            </value>
            <value>
                <fullName>Validate Transmission</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>Investigations Review</fullName>
            </value>
            <value>
                <fullName>QA and Review</fullName>
            </value>
            <value>
                <fullName>QA Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>