force-app/main/default/objects/DIA_Case__c/fields/Days_from_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Date_Closed__c</fullName>
    <formula>IF(ISBLANK(Closed_Date__c), 0, TODAY() - Closed_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Date Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>