force-app/main/default/objects/DIA_Case__c/fields/Extension_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension Approved Date</label>
    <type>Date</type>
</CustomField>