force-app/main/default/objects/DIA_Case__c/fields/If_the_case_was_expedited__c.field-meta.xml
<CustomField>
    <fullName>If_the_case_was_expedited__c</fullName>
    <label>If the case was expedited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>