force-app/main/default/objects/DIA_Case__c/fields/Is_ROI_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_ROI_Report_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ROI Report Generated</label>
    <type>Checkbox</type>
</CustomField>