force-app/main/default/objects/DIA_Case__c/fields/ISP_requested_Waiver__c.field-meta.xml
<CustomField>
    <fullName>ISP_requested_Waiver__c</fullName>
    <label>ISP requested Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>