force-app/main/default/objects/DIA_Case__c/fields/Order_Received__c.field-meta.xml
<CustomField>
    <fullName>Order_Received__c</fullName>
    <formula>DATE(
VALUE(RIGHT(Manifest__c, 4)),
VALUE(LEFT(Manifest__c, FIND(&quot;/&quot;, Manifest__c) - 1)),
VALUE(
IF(
FIND(&quot;/&quot;, MID(Manifest__c, FIND(&quot;/&quot;, Manifest__c) + 1, 10)) &gt; 0,
MID(Manifest__c, FIND(&quot;/&quot;, Manifest__c) + 1, FIND(&quot;/&quot;, MID(Manifest__c, FIND(&quot;/&quot;, Manifest__c) + 1, 10)) - 1),
MID(Manifest__c, FIND(&quot;/&quot;, Manifest__c) + 1, LEN(Manifest__c))
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Received</label>
    <type>Date</type>
</CustomField>