force-app/main/default/objects/DIA_Case__c/fields/QA_Rejected_Lead_Exists__c.field-meta.xml
<CustomField>
    <fullName>QA_Rejected_Lead_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Rejected Lead Exists</label>
    <type>Checkbox</type>
</CustomField>