force-app/main/default/objects/DIA_Case__c/fields/QA_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Review Completed Date</label>
    <type>Date</type>
</CustomField>