force-app/main/default/objects/DIA_Case__c/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Routing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>