force-app/main/default/objects/DIA_Case__c/fields/SF_86_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>SF_86_Certification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SF-86 Certification Date</label>
    <type>Date</type>
</CustomField>