force-app/main/default/objects/DIA_Case__c/fields/Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Type__c</fullName>
    <label>Subject Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>