force-app/main/default/objects/DIA_Case__c/fields/Waiver_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiver Due Date</label>
    <type>Date</type>
</CustomField>