force-app/main/default/objects/DIA_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Customer_Case_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Subject_Name__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Assigned_To_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Due_Date__c</columns>
    <columns>Case_Queue_Status__c</columns>
    <columns>Current_Task__c</columns>
    <columns>Case_SLA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>